@startuml
'https://plantuml.com/class-diagram

skinparam shadowing false
skinparam defaultFontName xfonts-wqy
skinparam defaultFontName console
skinparam dpi 300
skinparam activity  {
    DiamondFontSize 14
    ArrowFontSize 14
    FontSize 14
}


class UserController {
    - UserService userService
    + Long register(CreateUserRequest createUserRequest)
    + Boolean usernameExist(String username)
    + UserBriefDTO findById(Long userId)
    + List<UserBriefDTO> findBatchById(List<Long> ids)
    + void updateById(UpdateUserSimpleInfoRequest req)
}

class UserService {
    - UserMapper userMapper
    - UserAvatarService userAvatarService
    - PasswordEncryptor passwordEncryptor
    + Long createUser(CreateUserRequest request)
    + UserBriefDTO getBriefById(Long userId)
    + List<UserBriefDTO> getBatchBriefsByIds(Collection<Long> userIds)
    + boolean checkUsernameExists(String username)
    + void update(Long userId, UpdateUserSimpleInfoRequest req)
}

class PasswordEncryptor {
    - MessageDigest messageDigest
    + String encode(String password)
    + boolean match(String checkPassword, String realPassword)
}

package POJO {
    class UpdateUserSimpleInfoRequest {
        String signature
        String curPassword
        String newPassword
        Date birthday
    }
    class CreateUserRequest {
        String username
        String password
        Date birthday
    }
    class UserBriefDTO {
        Long id
        String username
        String avatar
        Date birthday
        String signature
        Date createTime
    }
}

abstract class BaseEntity {
    # Long creator
    # Date createTime
    # Date modifyTime
}
abstract class IdentifiedEntity extends BaseEntity {
    # Long id
}
class UserEntity extends IdentifiedEntity {
    - String username
    - String password
    - String avatar
    - Date birthday
    - String signature
}

UserController -> POJO
UserService ..> PasswordEncryptor: 密码散列化
POJO <- UserService
UserEntity <-- UserService : 用户信息
UserController ..> UserService : 业务操作
@enduml